--- a/youtubet.html
+++ b/youtubet.html
@@ -198,7 +198,7 @@
         <div class="logo"></div>
         <ul>
             <li><a href="#">观察者 - Youtuber</a></li>
-            <li><a href="youtube - next.html">NEXT</a></li>
+            <li><a href="youtubet - next.html">NEXT</a></li>
             
         </ul>
     </nav>
