Update youtubet - next.html

--- a/youtubet - next.html
+++ b/youtubet - next.html
@@ -197,7 +197,7 @@
     <nav>
         <a href="index.html"><div class="logo"></div></a>
         <ul>
-            <li><a href="youtube.html">观察者 - Youtuber</a></li>
+            <li><a href="youtubet.html">观察者 - Youtuber</a></li>
             <li><a href="#">NEXT</a></li>
             
         </ul>
