--- a/time.html
+++ b/time.html
@@ -194,6 +194,14 @@
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         }
 
+        footer a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
         .time-column {
             display: flex;
             flex-direction: column;
@@ -281,7 +289,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 AI观察者网 版权所有</p>
+        <a href="cal.html"><p>&copy; 2025 AI观察者网 版权所有</p></a>
     </footer>
     <script>
         const timeDisplay = document.getElementById('timeDisplay');
