--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
         <div class="row">
             <div class="item"><a href="https://platform.lingyiwanwu.com/chat" target="_blank"><img src="images/yi.png" alt="零一万物 AI 工具" loading="lazy"></a></div>
             <div class="item"><a href="https://chatglm.cn/" target="_blank"><img src="images/zhipu.png" alt="智谱 AI 工具" loading="lazy"></a></div>
-            <div class="item"><a href="https://ollama.com/" target="_blank"><img src="images/ollama.png" alt="ollama AI 工具" loading="lazy"></a></div>
-            <div class="item"><a href="https://www.notion.com/zh-cn" target="_blank"><img src="images/notion.png" alt="notion AI 工具" loading="lazy"></a></div>
-            <div class="item"><a href="https://www.notion.com/zh-cn" target="_blank"><img src="images/openai.png" alt="openai AI 工具" loading="lazy"></a></div>
+            <div class="item"><a href="https://github.com/" target="_blank"><img src="images/github.png" alt="ollama AI 工具" loading="lazy"></a></div>
+            <div class="item"><a href="https://www.yuque.com/" target="_blank"><img src="images/yuque.png" alt="notion AI 工具" loading="lazy"></a></div>
+            <div class="item"><a href="https://chatgpt.com/" target="_blank"><img src="images/openai.png" alt="openai AI 工具" loading="lazy"></a></div>
             <div class="item"><a href="https://picwish.cn/" target="_blank"><img src="images/zuotang.png" alt="佐糖 AI 工具" loading="lazy"></a></div>
             <div class="item"><a href="https://mubu.com/" target="_blank"><img src="images/mubu.png" alt="幕布 AI 工具" loading="lazy"></a></div>
             <div class="item"><a href="https://kimi.moonshot.cn/" target="_blank"><img src="images/kimi.png" alt="KIMI AI 工具" loading="lazy"></a></div>
