--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
     </div>
     <footer>
-        <a href="time.html"><p>&copy; 2025 AI观察者网 版权所有 Design By 贺倩</p></a>
+        <a href="time.html"><p>&copy; 2025 AI观察者网 版权所有 DESIGN BY HQ</p></a>
     </footer>
 </body>
 
