--- a/zyfx/jdzy.html
+++ b/zyfx/jdzy.html
@@ -200,7 +200,7 @@
 
     <!-- 页脚 -->
     <footer class="text-center">
-        <p>&copy; 2025 酒店管理职业指南 | Powered by xAI</p>
+        <p>&copy; 2025 酒店管理职业指南 | By Tao | 陶氏教育</p>
     </footer>
 
     <!-- Bootstrap JS -->
