--- a/zyfx/mrmf.html
+++ b/zyfx/mrmf.html
@@ -188,7 +188,7 @@
 
     <!-- 页脚 -->
     <footer class="text-center">
-        <p>&copy; 2025 美容美发职业指南 | By Tao | 陶氏教育</p>
+        <p>&copy; 2025 AI时代先行者 | By Tao | 陶氏教育</p>
     </footer>
 
     <!-- Bootstrap JS -->
