--- a/zyfx/lygl.html
+++ b/zyfx/lygl.html
@@ -187,7 +187,7 @@
 
     <!-- 页脚 -->
     <footer class="text-center">
-        <p>&copy; 2025 旅游服务与管理职业指南 | By Tao | 陶氏教育</p>
+        <p>&copy; 2025 AI时代先行者 | By Tao | 陶氏教育</p>
     </footer>
 
     <!-- Bootstrap JS -->
